<resources>
    <string name="app_name">CrazyLetters</string>
    <string name="app_name_main">Crazy Letters</string>

    <string name="title_game_config">Game Configuration</string>

    <string name="single_player">Create Game</string>
    <string name="multiplayer">Competitive</string>
    <string name="invitations">Invitations</string>
    <string name="invite_players">Invite</string>
    <string name="inv_popup_text">Incoming invitation!</string>
    <string name="see_invitations">See invitations</string>
    <string name="settings">Settings</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="sign_out">Sign Out</string>
    <string name="loading">Loading</string>
    <string name="play">Play</string>
    <string name="game_name">Game Name</string>
    <string name="game_name_short">Name</string>
    <string name="languages">Languages</string>
    <string name="game_mode_selection">Game Mode Selection</string>
    <string name="sign_in">Sign In</string>


    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="difficult">Difficult</string>
    <string name="impossible">Impossible</string>
    <string name="back">Back</string>

    <!--Dialogs-->
    <string name="game_save_title">Game Saved</string>
    <string name="game_save_message">The game configuration has been saved correctly</string>
    <string name="warning">Warning</string>
    <string name="error_title">Error</string>
    <string name="error_login">There has been an error in the sign in. Try it again later or continue without connection.</string>
    <string name="error_game_name">You must set a game name to save it.</string>
    <string name="error_no_letter_type">You must select at least one letter movement.</string>
    <string name="error_save_game">There has been an error while the game configuration was saving. Try it again!</string>
    <string name="error_create_game">There has been an error while the game was starting. Reconfigure the game and try it again!</string>
    <string name="accept">Accept</string>
    <string name="without_connection">Without Connection</string>
    <string name="retry">Retry</string>
    <string name="exit">Exit</string>

    <string name="warning_exit">Do you want to exit?</string>
    <string name="warning_game_override">There will be removed the changes that you have done. Do you want to continue?</string>
    <string name="warning_remove_game">Are you sure that you want to remove the game configuration? (this action cannot be redone)</string>
    <string name="warning_game_not_saved">Do you want to saved the configuration? (Clicking \'Cancel\' you will play with the configuration, but it will not be saved).</string>
    <string name="warning_exit_demo">Do you want to exit from the demo? You can redo it in settings.</string>
    <string name="warning_exit_single">Do you want to finish the game?</string>
    <string name="warning_exit_multiplayer">If you exit the game it will be marked as lost. Are you sure that you want to exit the game?</string>
    <string name="warning_exit_invitation_leader">Do you want to finish the game?</string>
    <string name="warning_exit_invitation">Do you want to exit from the game? If the game has not finished yet, you can reenter clicking again in the invitation.</string>

    <string name="infinite" translatable="false">\u221E</string>
    <string name="cross" translatable="false">\u2718</string>
    <string name="tick" translatable="false">\u2714</string>
    <string name="horizontal_arrow" translatable="false">\u2194</string>
    <string name="vertical_arrow" translatable="false">\u2195</string>
    <string name="diagonal_arrow" translatable="false">\u2197</string>
    <string name="show_hide" translatable="false">\u2732</string>

    <string name="velocity">Vel.</string>
    <string name="velocity_min">Min Velocity</string>
    <string name="velocity_max">Max Velocity</string>

    <string name="letter_type">Letters Movements</string>
    <string name="letter_type_short">Letters</string>
    <string name="letter_type_horiz_move">Horizontal Movements</string>
    <string name="letter_type_vert_move">Vertical Movements</string>
    <string name="letter_type_diag_move">Diagonal Movements</string>
    <string name="letter_type_show_hide">Show and Hide</string>

    <string name="last_used">Last Used</string>

    <string name="accents">Remove accents from letters</string>
    <string name="accents_short">Accents</string>
    <string name="language">Lan.</string>
    <string name="occurrences">Nº Words</string>

    <string name="all">All</string>
    <string name="time">Time</string>
    <string name="clock">\u23F1</string>

    <!--Setings options-->
    <string name="show_notifications">Show Notifications</string>
    <string name="allow_invitations">Allow Invitations</string>
    <string name="enableSound">Enable Sound</string>
    <string name="removeAds">Remove ads for 2 hours</string>
    <string name="save">Save</string>
    <string name="load_game">Load</string>
    <string name="cancel">Cancel</string>

    <string name="please_wait">Please wait&#8230;</string>

    <string name="error_signin_other">There was an issue with sign in. Please try again later.</string>
    <string name="error_network_operation_failed">Network error: Operation failed</string>
    <string name="error_match_inactive_match">This match is inactive.</string>
    <string name="error_match_already_rematched">This rematch has already been started!</string>


    <string name="game_title">Button Clicker 2000!</string>
    <string name="game_blurb">A sample game that tests your ability to click a button. Can you click faster than your friends? Only one way to find out! To play this game with friends, you must sign in with Google.</string>

    <string name="single_player_explanation">Get some practice!</string>
    <string name="quick_game">Quick game</string>
    <string name="quick_game_explanation">Challenge a random opponent.</string>
    <string name="invite_players_explanation">Invite friends to play a game.</string>
    <string name="see_invitations_explanation">See who is inviting you right now.</string>
    <string name="accept_popup_invite">Accept!</string>
    <string name="instructions">Click the button as fast as you can!</string>
    <string name="game_problem">An error occurred while starting the game. Please try again.</string>
    <string name="click_me">Click me!</string>
    <string name="is_inviting_you">is challenging you to a game!</string>
    <string name="status_exception_error">%1$s (status %2$d). %3$s.</string>

    <string name="status_multiplayer_error_not_trusted_tester">Anyone you invite must be a trusted tester</string>
    >
    <string name="client_reconnect_required">Games client reconnect required</string>
    <string name="internal_error">Internal error</string>
    <string name="unexpected_status">Unexpected status: %1$s</string>
    <string name='match_error_locally_modified'>This match has locally-modified data.  This operation cannot be performed until the match is sent to the server.</string>
    <string name="score_label">%1$s - Me</string>

    <string name="admob_id" translatable="false">ca-app-pub-4136978037886351~1365918375</string>
    <string name="banner" translatable="false">ca-app-pub-4136978037886351/2881168267</string>
    <string name="intersticial" translatable="false">ca-app-pub-4136978037886351/4082854705</string>
    <string name="reward" translatable="false">ca-app-pub-4136978037886351/9498832916</string>
</resources>
