<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryLight"
    tools:context=".fragments.CompetitiveSelectionFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/game_mode_selection"
        android:textAllCaps="true"
        android:gravity="center"
        android:textSize="@dimen/competitive_title_size"
        android:textColor="@color/colorSecondaryLight"
        android:fontFamily="@font/storm"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/competitive_btn_vertical_margin"
        android:layout_marginEnd="@dimen/competitive_btn_vertical_margin"
        android:layout_marginTop="@dimen/competitive_btn_vertical_margin"
        android:layout_marginBottom="@dimen/competitive_btn_horizontal_margin"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_below="@id/title"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btnEasy"
            style="@style/ButtoCompetitive"
            android:text="@string/easy"/>

        <Button
            android:id="@+id/btnMedium"
            style="@style/ButtoCompetitive"
            android:text="@string/medium"/>

        <Button
            android:id="@+id/btnDifficult"
            style="@style/ButtoCompetitive"
            android:text="@string/difficult"/>

        <Button
            android:id="@+id/btnImpossible"
            style="@style/ButtoCompetitive"
            android:text="@string/impossible"/>

        <Button
            android:id="@+id/btnBack"
            style="@style/ButtoCompetitive"
            android:drawableStart="@drawable/ic_back"
            android:text="@string/back"/>

    </LinearLayout>

</RelativeLayout>