<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/settings_pading"
    android:background="@color/colorPrimary"
    android:clipToPadding="false"
    tools:context=".fragments.SettingsFragment">

    <TextView
        android:id="@+id/tvSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textAllCaps="true"
        android:gravity="center"
        android:textSize="@dimen/title_text_size"
        android:layout_marginBottom="@dimen/settings_pading"
        android:textColor="@color/colorSecondaryLight"
        android:fontFamily="@font/storm"/>
    <Switch
        android:id="@+id/swShowNotifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_notifications"
        android:checked="true"
        android:textStyle="bold"
        android:textSize="@dimen/definition_text_size"
        android:layout_marginTop="@dimen/margin_center"
        android:textColor="@color/colorSecondaryLight"
        android:layout_below="@id/tvSettings"/>

    <Switch
        android:id="@+id/swAllowInvitations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/allow_invitations"
        android:checked="true"
        android:textStyle="bold"
        android:textSize="@dimen/definition_text_size"
        android:layout_marginTop="@dimen/margin_center"
        android:textColor="@color/colorSecondaryLight"
        android:layout_below="@id/swShowNotifications"/>

    <Switch
        android:id="@+id/swEnableSound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enableSound"
        android:checked="true"
        android:textStyle="bold"
        android:textSize="@dimen/definition_text_size"
        android:layout_marginTop="@dimen/margin_center"
        android:textColor="@color/colorSecondaryLight"
        android:layout_below="@id/swAllowInvitations"/>

    <RelativeLayout
        android:id="@+id/rlRemoveAds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_center"
        android:layout_below="@id/swEnableSound">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enableSound"
            android:textColor="@color/colorSecondaryLight"
            android:textStyle="bold"
            android:textSize="@dimen/definition_text_size"
            android:layout_alignParentStart="true"/>

        <ImageView
            android:id="@+id/ivRemoveAds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorSecondaryLight"
            android:src="@drawable/ic_remove"
            android:tint="@color/colorSecondaryLight"
            android:layout_alignParentEnd="true"/>

        <TextView
            android:id="@+id/tvRemoveAds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorSecondaryLight"
            android:textStyle="bold"
            android:textSize="@dimen/definition_text_size"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/btnSignOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_out"
        android:textStyle="bold"
        android:textSize="@dimen/definition_text_size"
        android:layout_margin="@dimen/menu_btn_margin"
        android:textColor="@color/colorSecondaryLight"
        android:gravity="center"
        android:layout_above="@id/llBottom" />

    <LinearLayout
        android:id="@+id/llBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnCancel"
            style="@style/MenuButton"
            android:text="@string/cancel"/>
        <Button
            android:id="@+id/btnSave"
            style="@style/MenuButton"
            android:text="@string/save"/>

    </LinearLayout>
</RelativeLayout>